--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# Node
-node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
+# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
-# Expo / React Native
+# dependencies
+node_modules/
+
+# Expo
 .expo/
-.expo-shared/
 dist/
 web-build/
+expo-env.d.ts
 
-# Mac / sistema
+# Native
+.kotlin/
+*.orig.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+
+# Metro
+.metro-health-check*
+
+# debug
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+
+# macOS
 .DS_Store
-*.log
+*.pem
 
-# IDEs
-.vscode/
-.idea/
+# local env files
+.env*.local
 
-# Build outputs
-android/
-ios/
+# typescript
+*.tsbuildinfo
+
+# generated native folders
+/ios
+/android
