--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "red-social",
-    "slug": "snack-29dec55b-7ed3-43c0-9da5-3a6c452fd48c",
+    "name": "socialnetworkui",
+    "slug": "snack-f8cc5b83-d64b-490b-8b60-f52fd89c6071",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
