--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "expo-font": "~14.0.9",
-    "expo-secure-store": "~15.0.7",
     "@expo/vector-icons": "^15.0.3",
     "react-native-paper": "4.9.2",
-    "react-native-screens": "~4.16.0",
-    "@react-navigation/native": "*",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "~5.6.0"
+    "@react-navigation/native": "7.1.22",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "expo-font": "~14.0.9",
+    "expo-secure-store": "~15.0.7"
   },
   "private": true
 }
